--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,13 @@
 astroid==2.3.3
 autopep8==1.5.1
+bcrypt==3.1.7
+cffi==1.14.0
 click==7.1.1
 entrypoints==0.3
 flake8==3.7.9
 Flask==1.1.2
+Flask-Bcrypt==0.7.1
+Flask-Login==0.5.0
 Flask-SQLAlchemy==2.4.1
 Flask-WTF==0.14.3
 isort==4.3.21
@@ -15,6 +19,7 @@ mccabe==0.6.1
 Pillow==7.1.1
 powerline-shell==0.7.0
 pycodestyle==2.5.0
+pycparser==2.20
 pyflakes==2.1.1
 pylint==2.4.4
 six==1.14.0
